se ajusta css para los contenedores y las imagenes de las consolas

--- a/compras/stilo.css
+++ b/compras/stilo.css
@@ -20,7 +20,7 @@ header h1{
 }
 .contenedor{
     max-width: 1200px;
-    padding: 10px;
+    padding: 20px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -39,17 +39,18 @@ header h1{
     transition: .3s;
 }
 .contenedor .contenedor-items .item{
-    max-width: 200px;
+    width: 250px;
+    height: 300px;
     margin: auto;
     border: 1px solid #666;
     border-radius: 10px;
     padding: 20px;
     transition: .3s;
+    
 }
 .contenedor .contenedor-items .item .img-item{
-    height: 100px;
-    width: 160px;
-    
+     width: 70%;
+     margin-left: 25px;
 }
 .contenedor .contenedor-items .item:hover{
     box-shadow: 0 0 10px #666;
