--- a/compras/stilo.css
+++ b/compras/stilo.css
@@ -9,15 +9,15 @@ header{
     background-size: cover;
     background-position:center;
     height: 400px;
-    
 }
 header h1{
     text-align: center;
-    font-size: 50px;
+    font-size: 100px;
     /* background-color: #000; */
     color: #fff;
     padding: 150px 0;
 }
+
 .contenedor{
     max-width: 1200px;
     padding: 20px;
@@ -73,7 +73,7 @@ header h1{
     display: block;
     margin: 10px auto;
     border: none;
-    background-color: black;
+    background-color: #007bff;
     color: #fff;
     padding: 5px 15px;
     border-radius: 5px;
@@ -95,7 +95,7 @@ header h1{
     opacity: 0;
 }
 .carrito .header-carrito{
-    background-color: #000;
+    background-color: #007bff;
     color: #fff;
     text-align: center;
     padding: 30px 0;
@@ -183,7 +183,7 @@ header h1{
     display: block;
     width: 100%;
     border: none;
-    background: #000;
+    background: #007bff;
     color: #fff;
     border-radius: 5px;
     font-size: 18px;
