--- a/compras/stilo.css
+++ b/compras/stilo.css
@@ -73,7 +73,7 @@ header h1{
     display: block;
     margin: 10px auto;
     border: none;
-    background-color: #007bff;
+    background-color: #4072c7;
     color: #fff;
     padding: 5px 15px;
     border-radius: 5px;
@@ -95,7 +95,7 @@ header h1{
     opacity: 0;
 }
 .carrito .header-carrito{
-    background-color: #007bff;
+    background-color: #4072c7;
     color: #fff;
     text-align: center;
     padding: 30px 0;
@@ -183,7 +183,7 @@ header h1{
     display: block;
     width: 100%;
     border: none;
-    background: #007bff;
+    background: #4072c7;
     color: #fff;
     border-radius: 5px;
     font-size: 18px;
