--- a/compras/stilo.css
+++ b/compras/stilo.css
@@ -42,7 +42,8 @@ header h1{
     width: 250px;
     height: 300px;
     margin: auto;
-    border: 1px solid #666;
+    /*border: 1px solid #666;*/
+    box-shadow: 10px 10px 20px rgba(9, 0, 0, 0.2);
     border-radius: 10px;
     padding: 20px;
     transition: .3s;
