--- a/compras/stilo.css
+++ b/compras/stilo.css
@@ -82,7 +82,7 @@ header h1{
 }
 /* seccion carrito */
 .carrito{
-    border: 1px solid #666;
+    /*border: 1px solid #666;*/
     width: 35%;
     margin-top: 30px;
     border-radius: 10px;
@@ -94,6 +94,7 @@ header h1{
     /* Estilos para ocultar */
     margin-right: -100%;
     opacity: 0;
+    box-shadow: 10px 10px 20px rgba(9, 0, 0, 0.2);
 }
 .carrito .header-carrito{
     background-color: #4072c7;
