--- a/css/estilos.css
+++ b/css/estilos.css
@@ -603,3 +603,7 @@ a:hover {
   border: 2px solid rgb(151, 151, 151);
   border-radius: 10px;
 }
+
+.btn-registro:hover{
+  background:rgb(242, 239, 229);
+}
