--- a/css/estilos.css
+++ b/css/estilos.css
@@ -439,6 +439,7 @@ a:hover {
 }
 
 .titulo_blog{
+  padding-top: 50px;
   display: flex;
   justify-content: center;
 }
@@ -451,10 +452,10 @@ a:hover {
 }
 
 .acordeon_consolas{
-  padding: 70px;
+  padding: 50px;
   width: 100%;  
   display: flex;
-  
+  margin-bottom: 100px;
 }
 
 .accordion{  
@@ -606,4 +607,37 @@ a:hover {
 
 .btn-registro:hover{
   background:rgb(242, 239, 229);
+}
+
+.carrusel{
+  padding: 50px 50px;
+  height: 100vh;
+  
+}
+
+.carrusel-items {
+  display: flex;
+  overflow-x:hidden;
+  overflow-y: hidden;
+  margin-right: 70px;
+  margin-left: 70px;
+  margin-bottom: 70px;
+}
+
+.carrusel-item {
+  min-width: 150px;
+  max-width: 300px;
+  height: 350px;
+  outline: 2px solid black;
+  cursor: pointer;
+}
+
+.carrusel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carrusel-item:hover{
+  transform: scale(1.5);  
 }
