Ajustes iconos sección videojuegos, se agrega boton comprar

--- a/estiloSliderJuegos.css
+++ b/estiloSliderJuegos.css
@@ -84,7 +84,7 @@
   }
 
   .icons i:hover{
-    color: #f8010a;
+    color: #4874c1;
     background-color: #fefefe;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     cursor: pointer;
