--- a/estiloSliderJuegos.css
+++ b/estiloSliderJuegos.css
@@ -90,6 +90,10 @@
     cursor: pointer;
   }
 
+  .btn_consolas{
+    margin-bottom: 40px;
+  }
+
 @media(max-width:991px) {
   body{
     min-height: 0vh;
@@ -103,7 +107,21 @@
     padding: 30px;
   }
 
-  .icons{
-    padding: 30px;
+  .movies h2{
+    font-size: 20px;
   }
+
+  .movies span{
+    font-size: 20px;
+  }
+
+  .icons{
+    padding: 30px;    
+  }
+
+  .btn_consolas{
+    padding-right: 50px;
+  }
+  
+  
 }
