Se agrega etiqueta figure en los img de seccion juegos, posteriormente se agrega la función de visibilidad a la etiqueta p por css apareciendo al hacer hover sobre la imagen

--- a/estiloSliderJuegos.css
+++ b/estiloSliderJuegos.css
@@ -59,12 +59,63 @@
     background-position: center;
     background-size: cover;
     width: 250px;
+    
   }
   
   .swiper-slide img{
     display: block;
-    width: 100%;
+    width: 100%;    
+    transition: all 500ms ease-out;
   }
+
+
+
+
+  .swiper-slide figure .capa{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #4874c1;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+    border-radius: 5px;
+  }
+
+  .swiper-slide figure:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .swiper-slide figure:hover > .capa{
+    margin-top: 0px;
+    margin-bottom: 0;
+  }
+
+  .swiper-slide figure:hover > .capa h3{
+    color: #fff;
+    font-weight: 400px;
+    margin-bottom: 40px;
+    transition: all 500ms ease-out;
+    margin-top: 30px;
+  }
+
+  .swiper-slide figure:hover > img{
+    transform: scale(1.3);
+    opacity: 0;
+  }
+
+  .swiper-slide figure:hover > .capa p{
+    color: #fff;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin: auto;
+  }
+
+
 
   .icons{
     
@@ -85,8 +136,7 @@
 
   .icons i:hover{
     color: #4874c1;
-    background-color: #fefefe;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    background-color: #fefefe;    
     cursor: pointer;
   }
 
