Se ajusta la palabra contactanos con tilde en la primera A

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -483,21 +483,21 @@ a:hover {
 }
 
 .btn_consolas a{
-  background:#47b2e4;
+  background:#4072c7;
   color: white;
   width: 400px;
   height: 40px;
   text-align: center;
   justify-content: center;
   border-radius: 5px;
-  margin-top: 20px;
+  margin-top: 5px;
   margin-left: 55px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.3);
   font-size: 24px;
 }
 
 .btn_consolas a:hover{
-  background: #3b71ca;
+  background: #47b2e4;
 }
 
 /*--------------------------------------------------------------
